<resources>
    <string name="app_name">Login App</string>

    <!-- Login Page -->
    <string name="txt_login_to_App">Login to App</string>
    <string name="txt_terms_and_privacy">By continuing, you agree to Terms and Privacy Policy</string>
    <string name="txt_signin_with_google">Signin with Google</string>
    <string name="txt_signin_with_facebook">Signin with Facebook</string>

    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_signup">New to app? Sign Up </string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_continue_login">Continue Login</string>
</resources>